--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Flatiron Task Lister</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
-
-    <form id="create-task-form" action="#" method="post">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
-    </form>
-
-    <div id="list">
-      <h2>My Todos</h2>
-      <ul id="tasks">
-      </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Flatiron Task Lister</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/125c865154.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="tooltip1">
+      Click to submit todo
     </div>
+    <div id="main-content">
+      <h1 class="heading">
+        <span class="greedy">Greedy </span>🧠<span class="greedy"> Tasks</span>
+      </h1>
 
-    <script src="./src/index.js"></script>
-  </div>
+      <form id="task-form" action="#" method="post">
+        <!-- <label for="new-task-description">The Agenda</label> -->
+        <div class="input-wrapper">
+          <input
+            type="text"
+            id="new-task-description"
+            name="new-task-description"
+            placeholder="Add Todo's here"
+          />
+          <button type="submit"><span class="pencil">✏️</span></button>
+        </div>
+      </form>
 
-</body>
+      <div id="list">
+        <h2>My Todos</h2>
+        <h5>* Double click a todo to mark as done *</h5>
+        <ul id="tasks"></ul>
+      </div>
+
+      <script src="./src/index.js"></script>
+    </div>
+  </body>
 </html>
